--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       <div class="collapse navbar-collapse" id="">
         <ul class="nav navbar-nav">
           <li class="dropdown">
-            <a href="/labs" class="dropdown-toggle" data-hover="dropdown">LABS</a>
+            <a href="/" class="dropdown-toggle" data-hover="dropdown">LABS</a>
           </li>
         </ul>
       </div>
