--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <a href="/newpledge/" title="" class="ir">Donate to Mayday PAC</a>
+          <a href="https://mayday.us/newpledge/" title="" class="ir">Donate to Mayday PAC</a>
         </div>
       </div>
     </div>
